--- a/samples/compute/create-virtual-machines-in-parallel/CreateVirtualMachinesInParallel.csproj
+++ b/samples/compute/create-virtual-machines-in-parallel/CreateVirtualMachinesInParallel.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Helpers\Helpers.csproj" />
+    <ProjectReference Include="..\..\utilities\Utilities.csproj" />
   </ItemGroup>
 
 </Project>
