--- a/samples/compute/manage-virtual-machine/ManageVMSample.csproj
+++ b/samples/compute/manage-virtual-machine/ManageVMSample.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Helpers\Helpers.csproj" />
+    <ProjectReference Include="..\..\utilities\Utilities.csproj" />
   </ItemGroup>
 
 </Project>
