--- a/samples/resources/deploy-using-arm-template/DeployUsingARMTemplate.csproj
+++ b/samples/resources/deploy-using-arm-template/DeployUsingARMTemplate.csproj
@@ -11,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Helpers\Helpers.csproj" />
+    <ProjectReference Include="..\..\utilities\Utilities.csproj" />
   </ItemGroup>
 
   <ItemGroup>
