--- a/samples/eventhub/manage-event-hub-events/ManageEventHubEvents.csproj
+++ b/samples/eventhub/manage-event-hub-events/ManageEventHubEvents.csproj
@@ -6,8 +6,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Azure.Identity" Version="1.2.0-preview.5" />
-    <PackageReference Include="Azure.Messaging.EventHubs" Version="5.2.0-preview.1" />
+    <PackageReference Include="Azure.Identity" Version="1.2.2" />
+    <PackageReference Include="Azure.Messaging.EventHubs" Version="5.2.0-preview.3" />
     <PackageReference Include="Azure.ResourceManager.EventHubs" Version="1.0.0-preview.1" />
   </ItemGroup>
 
