--- a/samples/utilities/Utilities.csproj
+++ b/samples/utilities/Utilities.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="Azure.ResourceManager.KeyVault" Version="1.0.0-preview.1" />
     <PackageReference Include="Azure.ResourceManager.Network" Version="1.0.0-preview.1" />
     <PackageReference Include="Azure.ResourceManager.Resources" Version="1.0.0-preview.1" />
+    <PackageReference Include="Azure.ResourceManager.Storage" Version="1.0.0-preview.1" />
   </ItemGroup>
 
 </Project>
