--- a/samples/storage/create-storage-account/CreateStorageSample.csproj
+++ b/samples/storage/create-storage-account/CreateStorageSample.csproj
@@ -11,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\utilities\Utilities.csproj" />
+    <ProjectReference Include="..\..\utilities\Utilities.csproj" />
   </ItemGroup>
 
 </Project>
