--- a/samples/utilities/Utilities.csproj
+++ b/samples/utilities/Utilities.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="Azure.Identity" Version="1.2.2" />
+    <PackageReference Include="Azure.ResourceManager.AppConfiguration" Version="1.0.0-preview.1" />
     <PackageReference Include="Azure.ResourceManager.Compute" Version="1.0.0-preview.1" />
     <PackageReference Include="Azure.ResourceManager.EventHubs" Version="1.0.0-preview.1" />
     <PackageReference Include="Azure.ResourceManager.KeyVault" Version="1.0.0-preview.1" />
