Implemented Create App Configuration example

--- a/samples/appconfiguration/create-app-configuration/CreateAppConfigurationSample.csproj
+++ b/samples/appconfiguration/create-app-configuration/CreateAppConfigurationSample.csproj
@@ -7,7 +7,11 @@
   
   <ItemGroup>
     <PackageReference Include="Azure.Identity" Version="1.2.2" />
-    <PackageReference Include="Azure.ResourceManager.Compute" Version="1.0.0-preview.1" />
+    <PackageReference Include="Azure.ResourceManager.AppConfiguration" Version="1.0.0-preview.1" />
+  </ItemGroup>
+  
+  <ItemGroup>
+    <ProjectReference Include="..\..\utilities\Utilities.csproj" />
   </ItemGroup>
 
 </Project>
