--- a/samples/utilities/Utilities.csproj
+++ b/samples/utilities/Utilities.csproj
@@ -7,11 +7,13 @@
 
   <ItemGroup>
     <PackageReference Include="Azure.Identity" Version="1.2.2" />
+    <PackageReference Include="Azure.ResourceManager.AppConfiguration" Version="1.0.0-preview.1" />
     <PackageReference Include="Azure.ResourceManager.Compute" Version="1.0.0-preview.1" />
     <PackageReference Include="Azure.ResourceManager.EventHubs" Version="1.0.0-preview.1" />
     <PackageReference Include="Azure.ResourceManager.KeyVault" Version="1.0.0-preview.1" />
     <PackageReference Include="Azure.ResourceManager.Network" Version="1.0.0-preview.1" />
     <PackageReference Include="Azure.ResourceManager.Resources" Version="1.0.0-preview.1" />
+    <PackageReference Include="Azure.ResourceManager.Storage" Version="1.0.0-preview.1" />
   </ItemGroup>
 
 </Project>
