--- a/samples/utilities/Utilities.csproj
+++ b/samples/utilities/Utilities.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="Azure.ResourceManager.Network" Version="1.0.0-preview.1" />
     <PackageReference Include="Azure.ResourceManager.Resources" Version="1.0.0-preview.1" />
     <PackageReference Include="Azure.ResourceManager.Storage" Version="1.0.0-preview.1" />
+    <PackageReference Include="Azure.ResourceManager.Communication" Version="1.0.0-beta.1" />
   </ItemGroup>
 
 </Project>
