--- a/samples/communication/manage-communication/ManageCommunication.csproj
+++ b/samples/communication/manage-communication/ManageCommunication.csproj
@@ -7,8 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="Azure.Identity" Version="1.2.2" />
-    <PackageReference Include="Azure.ResourceManager.Communication" Version="1.0.0-beta.1" />
-    <PackageReference Include="NUnit" Version="3.12.0" />
+    <PackageReference Include="Azure.ResourceManager.Communication" Version="1.0.0" />
   </ItemGroup>
 
   <ItemGroup>
