--- a/samples/keyvault/manage-key-vault/ManageKeyVault.csproj
+++ b/samples/keyvault/manage-key-vault/ManageKeyVault.csproj
@@ -7,7 +7,8 @@
 
   <ItemGroup>
     <PackageReference Include="Azure.Identity" Version="1.2.2" />
-    <PackageReference Include="Azure.ResourceManager.KeyVault" Version="1.0.0-preview.1" />
+    <PackageReference Include="Azure.ResourceManager" Version="1.0.0-beta.2" />
+    <PackageReference Include="Azure.ResourceManager.KeyVault" Version="1.0.0-beta.1" />
   </ItemGroup>
 
   <ItemGroup>
