--- a/samples/network/manage-ip-address/ManageIPAddress.csproj
+++ b/samples/network/manage-ip-address/ManageIPAddress.csproj
@@ -6,12 +6,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Azure.ResourceManager.Compute" Version="1.0.0-preview.1" />
-    <PackageReference Include="Azure.ResourceManager.Network" Version="1.0.0-preview.1" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\..\utilities\Utilities.csproj" />
+    <PackageReference Include="Azure.Identity" Version="1.2.2" />
+    <PackageReference Include="Azure.ResourceManager.Compute" Version="1.0.0-beta.1" />
+    <PackageReference Include="Azure.ResourceManager.Network" Version="1.0.0-beta.1" />
   </ItemGroup>
 
 </Project>
