--- a/samples/storage/create-storage-account/CreateStorageSample.csproj
+++ b/samples/storage/create-storage-account/CreateStorageSample.csproj
@@ -7,11 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="Azure.Identity" Version="1.2.2" />
-    <PackageReference Include="Azure.ResourceManager.Storage" Version="1.0.0-preview.1" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\..\utilities\Utilities.csproj" />
+    <PackageReference Include="Azure.ResourceManager.Storage" Version="1.0.0-beta.5" />
   </ItemGroup>
 
 </Project>
