--- a/samples/communication/manage-communication/ManageCommunication.csproj
+++ b/samples/communication/manage-communication/ManageCommunication.csproj
@@ -7,7 +7,8 @@
 
   <ItemGroup>
     <PackageReference Include="Azure.Identity" Version="1.10.2" />
-    <PackageReference Include="Azure.ResourceManager.Communication" Version="1.0.0" />
+    <PackageReference Include="Azure.ResourceManager" Version="1.9.0" />
+    <PackageReference Include="Azure.ResourceManager.Communication" Version="1.2.0-beta.4" />
   </ItemGroup>
 
   <ItemGroup>
