--- a/samples/compute/create-virtual-machine/CreateVMSample.csproj
+++ b/samples/compute/create-virtual-machine/CreateVMSample.csproj
@@ -7,7 +7,8 @@
   
   <ItemGroup>
     <PackageReference Include="Azure.Identity" Version="1.10.2" />
-    <PackageReference Include="Azure.ResourceManager.Compute" Version="1.0.0-preview.1" />
+    <PackageReference Include="Azure.ResourceManager" Version="1.9.0" />
+    <PackageReference Include="Azure.ResourceManager.Compute" Version="1.2.1" />
     <PackageReference Include="Azure.ResourceManager.Network" Version="1.0.0-preview.1" />
     <PackageReference Include="Azure.ResourceManager.Resources" Version="1.0.0-preview.1" />
   </ItemGroup>
