--- a/samples/appconfiguration/create-app-configuration/CreateAppConfigurationSample.csproj
+++ b/samples/appconfiguration/create-app-configuration/CreateAppConfigurationSample.csproj
@@ -7,7 +7,7 @@
   
   <ItemGroup>
     <PackageReference Include="Azure.Identity" Version="1.10.2" />
-    <PackageReference Include="Azure.ResourceManager.AppConfiguration" Version="1.0.0-preview.1" />
+    <PackageReference Include="Azure.ResourceManager.AppConfiguration" Version="1.1.0" />
   </ItemGroup>
   
   <ItemGroup>
