--- a/samples/compute/create-virtual-machines-in-parallel/CreateVirtualMachinesInParallel.csproj
+++ b/samples/compute/create-virtual-machines-in-parallel/CreateVirtualMachinesInParallel.csproj
@@ -6,10 +6,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Azure.Identity" Version="1.10.2" />
-    <PackageReference Include="Azure.ResourceManager.Compute" Version="1.0.0-preview.1" />
-    <PackageReference Include="Azure.ResourceManager.Network" Version="1.0.0-preview.1" />
-    <PackageReference Include="Azure.ResourceManager.Storage" Version="1.0.0-preview.1" />
+    <PackageReference Include="Azure.Identity" Version="1.10.4" />
+    <PackageReference Include="Azure.ResourceManager.Compute" Version="1.2.1" />
+    <PackageReference Include="Azure.ResourceManager.Network" Version="1.6.0" />
+    <PackageReference Include="Azure.ResourceManager.Storage" Version="1.2.0" />
   </ItemGroup>
 
   <ItemGroup>
