--- a/samples/eventhub/manage-event-hub-events/ManageEventHubEvents.csproj
+++ b/samples/eventhub/manage-event-hub-events/ManageEventHubEvents.csproj
@@ -6,9 +6,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Azure.Identity" Version="1.10.2" />
-    <PackageReference Include="Azure.Messaging.EventHubs" Version="5.2.0-preview.3" />
-    <PackageReference Include="Azure.ResourceManager.EventHubs" Version="1.0.0-preview.1" />
+    <PackageReference Include="Azure.Identity" Version="1.10.4" />
+    <PackageReference Include="Azure.Messaging.EventHubs" Version="5.10.0" />
+    <PackageReference Include="Azure.ResourceManager.EventHubs" Version="1.1.0-beta.4" />
   </ItemGroup>
 
   <ItemGroup>
