--- a/samples/eventhub/manage-event-hub-geo-disaster-recovery/ManageEventHubGeoDisasterRecovery.csproj
+++ b/samples/eventhub/manage-event-hub-geo-disaster-recovery/ManageEventHubGeoDisasterRecovery.csproj
@@ -6,8 +6,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Azure.Identity" Version="1.10.2" />
-    <PackageReference Include="Azure.ResourceManager.EventHubs" Version="1.0.0-preview.1" />
+    <PackageReference Include="Azure.Identity" Version="1.10.4" />
+    <PackageReference Include="Azure.ResourceManager.EventHubs" Version="1.1.0-beta.4" />
   </ItemGroup>
 
   <ItemGroup>
