--- a/samples/resources/manage-resource/ManageResource.csproj
+++ b/samples/resources/manage-resource/ManageResource.csproj
@@ -6,8 +6,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Azure.Identity" Version="1.10.2" />
-    <PackageReference Include="Azure.ResourceManager.Resources" Version="1.0.0-preview.1" />
+    <PackageReference Include="Azure.Identity" Version="1.10.4" />
+    <PackageReference Include="Azure.ResourceManager.Resources" Version="1.7.0" />
+    <PackageReference Include="Azure.ResourceManager.Storage" Version="1.2.0" />
   </ItemGroup>
 
   <ItemGroup>
