--- a/samples/network/manage-virtual-network/ManageVirtualNetwork.csproj
+++ b/samples/network/manage-virtual-network/ManageVirtualNetwork.csproj
@@ -6,9 +6,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Azure.Identity" Version="1.10.2" />
-    <PackageReference Include="Azure.ResourceManager.Compute" Version="1.0.0-beta.5" />
-    <PackageReference Include="Azure.ResourceManager.Network" Version="1.0.0-beta.5" />
+    <PackageReference Include="Azure.Identity" Version="1.10.4" />
+    <PackageReference Include="Azure.ResourceManager.Compute" Version="1.2.1" />
+    <PackageReference Include="Azure.ResourceManager.Network" Version="1.6.0" />
   </ItemGroup>
 
 </Project>
