--- a/samples/utilities/Utilities.csproj
+++ b/samples/utilities/Utilities.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Azure.Identity" Version="1.10.2" />
+    <PackageReference Include="Azure.Identity" Version="1.10.4" />
     <PackageReference Include="Azure.ResourceManager.AppConfiguration" Version="1.0.0-preview.1" />
     <PackageReference Include="Azure.ResourceManager.Compute" Version="1.0.0-preview.1" />
     <PackageReference Include="Azure.ResourceManager.EventHubs" Version="1.0.0-preview.1" />
@@ -14,7 +14,7 @@
     <PackageReference Include="Azure.ResourceManager.Network" Version="1.0.0-preview.1" />
     <PackageReference Include="Azure.ResourceManager.Resources" Version="1.0.0-preview.1" />
     <PackageReference Include="Azure.ResourceManager.Storage" Version="1.0.0-preview.1" />
-    <PackageReference Include="Azure.ResourceManager.Communication" Version="1.0.0" />
+    <PackageReference Include="Azure.ResourceManager.Communication" Version="1.2.0-beta.4" />
   </ItemGroup>
 
 </Project>
