--- a/samples/compute/manage-virtual-machine-extension/ManageVMExtension.csproj
+++ b/samples/compute/manage-virtual-machine-extension/ManageVMExtension.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -6,9 +6,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Azure.Identity" Version="1.10.2" />
-    <PackageReference Include="Azure.ResourceManager.Compute" Version="1.0.0-preview.1" />
-    <PackageReference Include="Azure.ResourceManager.Network" Version="1.0.0-preview.1" />
+    <PackageReference Include="Azure.Identity" Version="1.10.4" />
+    <PackageReference Include="Azure.ResourceManager.Compute" Version="1.2.1" />
+    <PackageReference Include="Azure.ResourceManager.Network" Version="1.6.0" />
   </ItemGroup>
 
   <ItemGroup>
