--- a/samples/compute/manage-virtual-machine/ManageVMSample.csproj
+++ b/samples/compute/manage-virtual-machine/ManageVMSample.csproj
@@ -6,7 +6,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\utilities\Utilities.csproj" />
+	  <PackageReference Include="Azure.Identity" Version="1.10.4" />
+	  <PackageReference Include="Azure.ResourceManager.Compute" Version="1.2.1" />
+	  <PackageReference Include="Azure.ResourceManager.Network" Version="1.6.0" />
   </ItemGroup>
+
+	<ItemGroup>
+		<ProjectReference Include="..\..\utilities\Utilities.csproj" />
+	</ItemGroup>
 
 </Project>
