--- a/samples/utilities/Utilities.csproj
+++ b/samples/utilities/Utilities.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Library</OutputType>
@@ -6,10 +6,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Azure.Identity" Version="1.10.2" />
+    <PackageReference Include="Azure.Identity" Version="1.10.4" />
     <PackageReference Include="Azure.ResourceManager.AppConfiguration" Version="1.0.0-preview.1" />
     <PackageReference Include="Azure.ResourceManager.Compute" Version="1.0.0-preview.1" />
-    <PackageReference Include="Azure.ResourceManager.EventHubs" Version="1.0.0-preview.1" />
+    <PackageReference Include="Azure.ResourceManager.EventHubs" Version="1.1.0-beta.4" />
     <PackageReference Include="Azure.ResourceManager.KeyVault" Version="1.0.0-preview.1" />
     <PackageReference Include="Azure.ResourceManager.Network" Version="1.0.0-preview.1" />
     <PackageReference Include="Azure.ResourceManager.Resources" Version="1.0.0-preview.1" />
