Adding implementations for different ARMClient functions
Adding implementations for different ARMClient functions

--- a/samples/resources/deploy-using-arm-template/DeployUsingARMTemplate.csproj
+++ b/samples/resources/deploy-using-arm-template/DeployUsingARMTemplate.csproj
@@ -8,6 +8,8 @@
   <ItemGroup>
     <PackageReference Include="Azure.Identity" Version="1.10.4" />
     <PackageReference Include="Azure.ResourceManager.Resources" Version="1.7.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="System.Diagnostics.DiagnosticSource" Version="6.0.0" />
   </ItemGroup>
 
   <ItemGroup>
